<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.dbremes.dbtradealert.WatchlistListActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="Refresh"
        android:titleCondensed="Refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reminders_management"
        android:title="Manage Reminders"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_securities_management"
        android:title="Manage Securities"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_watchlists_management"
        android:title="Manage Watchlists"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy_database"
        android:title="Copy Database"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_export_database"
                android:title="Export Database" />
            <item
                android:id="@+id/action_import_database"
                android:title="Import Database" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:title="Help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="About"
        app:showAsAction="never" />
</menu>
